--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@heroicons/react": "~2.0.11",
+    "@hookform/resolvers": "^3.9.0",
     "@rainbow-me/rainbowkit": "2.1.2",
     "@rainbow-me/rainbowkit-siwe-next-auth": "^0.4.1",
     "@tanstack/react-query": "~5.28.6",
@@ -37,12 +38,14 @@
     "react": "~18.2.0",
     "react-copy-to-clipboard": "~5.1.0",
     "react-dom": "~18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-hot-toast": "~2.4.0",
     "siwe": "^2.3.2",
     "use-debounce": "~8.0.4",
     "usehooks-ts": "2.13.0",
     "viem": "2.13.6",
     "wagmi": "2.9.8",
+    "zod": "^3.23.8",
     "zustand": "~4.1.2"
   },
   "devDependencies": {
