--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -40,6 +40,7 @@
     "react-dom": "~18.2.0",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "~2.4.0",
+    "react-tooltip": "^5.27.1",
     "siwe": "^2.3.2",
     "use-debounce": "~8.0.4",
     "usehooks-ts": "2.13.0",
