--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "test": "yarn hardhat:test",
     "vercel": "yarn workspace @se-2/nextjs vercel",
     "vercel:yolo": "yarn workspace @se-2/nextjs vercel:yolo",
-    "verify": "yarn workspace @se-2/hardhat verify"
+    "verify": "yarn workspace @se-2/hardhat verify",
+    "ponder:start": "yarn workspace @se-2/ponder start",
+    "ponder:dev": "yarn workspace @se-2/ponder dev",
+    "ponder:codegen": "yarn workspace @se-2/ponder codegen"
   },
   "resolutions": {
     "usehooks-ts@^2.7.2": "patch:usehooks-ts@npm:^2.7.2#./.yarn/patches/usehooks-ts-npm-2.7.2-fceffe0e43.patch"
