--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -11,3 +11,5 @@
 # More info: https://nextjs.org/docs/pages/building-your-application/configuring/environment-variables
 NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
+# will be used in production
+NEXT_PUBLIC_PONDER_URL=
