--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -16,6 +16,7 @@
     "vercel:yolo": "vercel --build-env NEXT_PUBLIC_IGNORE_BUILD_ERROR=true"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@heroicons/react": "~2.0.11",
     "@hookform/resolvers": "^3.9.0",
     "@rainbow-me/rainbowkit": "2.1.2",
@@ -23,12 +24,14 @@
     "@tanstack/react-query": "~5.28.6",
     "@uniswap/sdk-core": "~4.0.1",
     "@uniswap/v2-sdk": "~3.0.1",
+    "@vercel/postgres": "^0.10.0",
     "blo": "~1.0.1",
     "burner-connector": "~0.0.8",
     "daisyui": "4.5.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
     "ethers": "^6.13.1",
+    "graphql": "^16.9.0",
     "next": "~14.0.4",
     "next-auth": "^4.24.7",
     "nprogress": "~0.2.0",
