make request to telegram webhook

--- a/packages/nextjs/.env.example
+++ b/packages/nextjs/.env.example
@@ -13,3 +13,11 @@ NEXT_PUBLIC_ALCHEMY_API_KEY=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=
 # will be used in production
 NEXT_PUBLIC_PONDER_URL=
+
+
+POSTGRES_URL="postgresql://postgres:mysecretpassword@localhost:5432/postgres"
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=somereallysecretsecret
+
+TELEGRAM_BOT_URL=http://localhost:8080
+TELEGRAM_WEBHOOK_SECRET=your_secret_here
