--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -34,6 +34,7 @@
     "graphql": "^16.9.0",
     "next": "~14.0.4",
     "next-auth": "^4.24.7",
+    "next-plausible": "^3.12.3",
     "nprogress": "~0.2.0",
     "pg": "^8.12.0",
     "qrcode.react": "~3.1.0",
