--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -40,6 +40,7 @@
     "qrcode.react": "~3.1.0",
     "react": "~18.2.0",
     "react-copy-to-clipboard": "~5.1.0",
+    "react-datepicker": "^8.2.0",
     "react-dom": "~18.2.0",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "~2.4.0",
